syntax = "proto3";
package assetmantle.schema.ids.base;

import "ids/base/string_id.proto";
import "gogoproto/gogo.proto";

message PropertyID{
  option (gogoproto.goproto_getters) = false;

  StringID key_i_d = 1;
  StringID type_i_d = 2;
}